// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates solution helper with optional properties 1`] = `
Object {
  "Conditions": Object {
    "HelperAnonymousDatatoAWS6303A68E": Object {
      "Fn::Equals": Array [
        Object {
          "Fn::FindInMap": Array [
            "HelperAnonymousData1341617A",
            "SendAnonymousData",
            "Data",
          ],
        },
        "Yes",
      ],
    },
  },
  "Mappings": Object {
    "HelperAnonymousData1341617A": Object {
      "SendAnonymousData": Object {
        "Data": "Yes",
      },
    },
  },
  "Parameters": Object {
    "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cArtifactHashC988886A": Object {
      "Description": "Artifact hash for asset \\"d4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815c\\"",
      "Type": "String",
    },
    "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3BucketCEC781C2": Object {
      "Description": "S3 bucket for asset \\"d4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815c\\"",
      "Type": "String",
    },
    "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3VersionKey58A940A3": Object {
      "Description": "S3 key for asset version \\"d4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815c\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "HelperCreateUniqueID28DA313C": Object {
      "Condition": "HelperAnonymousDatatoAWS6303A68E",
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Resource": "UUID",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "HelperSolutionHelperB4625520",
            "Arn",
          ],
        },
      },
      "Type": "Custom::CreateUUID",
      "UpdateReplacePolicy": "Delete",
    },
    "HelperRole30063D70": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:",
                        Object {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "CloudWatchLogsPolicy",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "HelperSendAnonymousData42DD297E": Object {
      "Condition": "HelperAnonymousDatatoAWS6303A68E",
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AccessControlMethod": "IAM role-based authentication",
        "BrokerInstanceType": "kafka.m5.large",
        "BufferingInterval": 300,
        "BufferingSize": 5,
        "CompressionFormat": "GZIP",
        "EnhancedMonitoring": "false",
        "MonitoringLevel": "DEFAULT",
        "NumberOfBrokerNodes": 2,
        "Pattern": "test-pattern",
        "Region": Object {
          "Ref": "AWS::Region",
        },
        "Resource": "AnonymousMetric",
        "RetentionHours": 24,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "HelperSolutionHelperB4625520",
            "Arn",
          ],
        },
        "ShardCount": 2,
        "SolutionId": "SO9999",
        "UUID": Object {
          "Fn::GetAtt": Array [
            "HelperCreateUniqueID28DA313C",
            "UUID",
          ],
        },
        "Version": "%%VERSION%%",
      },
      "Type": "Custom::AnonymousData",
      "UpdateReplacePolicy": "Delete",
    },
    "HelperSolutionHelperB4625520": Object {
      "Condition": "HelperAnonymousDatatoAWS6303A68E",
      "DependsOn": Array [
        "HelperRole30063D70",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3BucketCEC781C2",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3VersionKey58A940A3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3VersionKey58A940A3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This function generates UUID for each deployment and sends anonymous data to the AWS Solutions team",
        "Handler": "lambda_function.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "HelperRole30063D70",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
  },
}
`;

exports[`creates solution helper without any optional properties 1`] = `
Object {
  "Conditions": Object {
    "HelperAnonymousDatatoAWS6303A68E": Object {
      "Fn::Equals": Array [
        Object {
          "Fn::FindInMap": Array [
            "HelperAnonymousData1341617A",
            "SendAnonymousData",
            "Data",
          ],
        },
        "Yes",
      ],
    },
  },
  "Mappings": Object {
    "HelperAnonymousData1341617A": Object {
      "SendAnonymousData": Object {
        "Data": "Yes",
      },
    },
  },
  "Parameters": Object {
    "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cArtifactHashC988886A": Object {
      "Description": "Artifact hash for asset \\"d4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815c\\"",
      "Type": "String",
    },
    "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3BucketCEC781C2": Object {
      "Description": "S3 bucket for asset \\"d4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815c\\"",
      "Type": "String",
    },
    "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3VersionKey58A940A3": Object {
      "Description": "S3 key for asset version \\"d4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815c\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "HelperCreateUniqueID28DA313C": Object {
      "Condition": "HelperAnonymousDatatoAWS6303A68E",
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Resource": "UUID",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "HelperSolutionHelperB4625520",
            "Arn",
          ],
        },
      },
      "Type": "Custom::CreateUUID",
      "UpdateReplacePolicy": "Delete",
    },
    "HelperRole30063D70": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:",
                        Object {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "CloudWatchLogsPolicy",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "HelperSendAnonymousData42DD297E": Object {
      "Condition": "HelperAnonymousDatatoAWS6303A68E",
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Pattern": "test-pattern",
        "Region": Object {
          "Ref": "AWS::Region",
        },
        "Resource": "AnonymousMetric",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "HelperSolutionHelperB4625520",
            "Arn",
          ],
        },
        "SolutionId": "SO9999",
        "UUID": Object {
          "Fn::GetAtt": Array [
            "HelperCreateUniqueID28DA313C",
            "UUID",
          ],
        },
        "Version": "%%VERSION%%",
      },
      "Type": "Custom::AnonymousData",
      "UpdateReplacePolicy": "Delete",
    },
    "HelperSolutionHelperB4625520": Object {
      "Condition": "HelperAnonymousDatatoAWS6303A68E",
      "DependsOn": Array [
        "HelperRole30063D70",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3BucketCEC781C2",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3VersionKey58A940A3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd4b1779fb1f95d1925cd96928d022a14fe9f3b94a2e77f53fbf6cdb8935a815cS3VersionKey58A940A3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This function generates UUID for each deployment and sends anonymous data to the AWS Solutions team",
        "Handler": "lambda_function.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "HelperRole30063D70",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
  },
}
`;
